--- a/.env
+++ b/.env
@@ -5,15 +5,16 @@
 BYBIT_API_KEY="chwMihJldYroOJZVbM"
 BYBIT_API_SECRET="uItzzkSJFAsK1NeTLB24rtvnCjqf4RvuoG8e"
 
-TRADING_INTERVAL="1"
-TRADING_LIMIT=60
+TRADING_INTERVAL="5"
+TRADING_LIMIT=100
 
 TRADE_QUANTITY=0.15
-LEVERAGE=10
+LEVERAGE=5
 TRADING_SYMBOL="BTCUSDT"
 
-ATR_MULTIPLIER=0.5
-RISK_RATIO=0.5
+ATR_PERIOD=14
+ATR_MULTIPLIER=1.5
+RISK_RATIO=2.0
 
 ENABLE_EMA_RSI_STRATEGY=True
 
